[gd_scene load_steps=26 format=3 uid="uid://bbtucwcrm3ai2"]

[ext_resource type="Script" path="res://addons/transition_mgr/transition_mgr.gd" id="1_3w3bw"]
[ext_resource type="Shader" path="res://addons/transition_mgr/transition_mgr.gdshader" id="2_c8yx7"]
[ext_resource type="Texture2D" uid="uid://w0swrg50f00" path="res://assets/Arts/Scrollable_Loading_Background.png" id="2_hvux1"]
[ext_resource type="Texture2D" uid="uid://bowoqqi015sm7" path="res://assets/Arts/spritesheets/UISheet.png" id="4_d5viw"]
[ext_resource type="Texture2D" uid="uid://cw8nxifob1skn" path="res://Game/Components/Visual_Component/Untitled_05-24-2024_08-29-35_6.png" id="4_iaiva"]
[ext_resource type="FontFile" uid="uid://cehuy778740x6" path="res://assets/fonts/Pixellari.ttf" id="6_ds2yw"]
[ext_resource type="Script" path="res://Game/Dialogue/dialogue_holder.gd" id="7_d6db0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pnl6b"]
shader = ExtResource("2_c8yx7")

[sub_resource type="Animation" id="Animation_ywbuj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrollBackground:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fkof3"]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrollBackground:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_w7d3q"]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrollBackground:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w12t0"]
_data = {
"RESET": SubResource("Animation_ywbuj"),
"fadeIn": SubResource("Animation_fkof3"),
"fadeOut": SubResource("Animation_w7d3q")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_t1r77"]
load_path = "res://.godot/imported/Story.png-906010d66f40b8b94b06337c0c28fb61.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_rr6he"]
atlas = SubResource("CompressedTexture2D_t1r77")
region = Rect2(0, 0, 240, 152)

[sub_resource type="LabelSettings" id="LabelSettings_r3tlx"]
font = ExtResource("6_ds2yw")
font_size = 40
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.529412)
shadow_offset = Vector2(5, 5)

[sub_resource type="CanvasTexture" id="CanvasTexture_0gmd4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wb1gi"]
atlas = SubResource("CompressedTexture2D_t1r77")
region = Rect2(0, 152, 240, 145)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsacs"]
atlas = ExtResource("4_d5viw")
region = Rect2(0, 96, 128, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c5qc4"]
texture = SubResource("AtlasTexture_vsacs")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 0, 128, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_850my"]
bg_color = Color(0.666667, 0.756863, 0.105882, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6ge5"]
atlas = ExtResource("4_iaiva")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf8ee"]
atlas = ExtResource("4_iaiva")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4v6m"]
atlas = ExtResource("4_iaiva")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_le2ud"]
atlas = ExtResource("4_iaiva")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3hed0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6ge5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf8ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4v6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le2ud")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="transition_mgr" type="CanvasLayer" node_paths=PackedStringArray("imagePanels1", "imagePanels2")]
process_mode = 3
layer = 2
script = ExtResource("1_3w3bw")
imagePanels1 = [NodePath("Story/Page1/HidePanel1"), NodePath("Story/Page1/HidePanel2")]
imagePanels2 = [NodePath("Story/Page2/HidePanel1"), NodePath("Story/Page2/HidePanel1"), NodePath("Story/Page2/HidePanel2"), NodePath("Story/Page2/HidePanel3"), NodePath("Story/Page2/HidePanel3")]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="ScrollBackground" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_pnl6b")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hvux1")
stretch_mode = 1

[node name="fadeAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w12t0")
}
speed_scale = 4.0

[node name="Story" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Page1" type="TextureRect" parent="Story"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -76.0
offset_right = 120.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(120, 100)
texture = SubResource("AtlasTexture_rr6he")

[node name="Year" type="Label" parent="Story/Page1"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 306.0
offset_bottom = 43.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_shadow_color = Color(0.195371, 0.13411, 0.0987246, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("6_ds2yw")
text = "Year xxxx"
label_settings = SubResource("LabelSettings_r3tlx")
horizontal_alignment = 1

[node name="HidePanel1" type="TextureRect" parent="Story/Page1"]
self_modulate = Color(0, 0, 0, 0.839216)
layout_mode = 0
offset_left = 144.0
offset_top = 8.0
offset_right = 239.0
offset_bottom = 79.0
texture = SubResource("CanvasTexture_0gmd4")

[node name="HidePanel2" type="TextureRect" parent="Story/Page1"]
self_modulate = Color(0, 0, 0, 0.839216)
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 239.0
offset_bottom = 151.0
texture = SubResource("CanvasTexture_0gmd4")

[node name="Page2" type="TextureRect" parent="Story"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -76.0
offset_right = 120.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(120, 100)
texture = SubResource("AtlasTexture_wb1gi")

[node name="HidePanel1" type="TextureRect" parent="Story/Page2"]
self_modulate = Color(0, 0, 0, 0.839216)
layout_mode = 0
offset_left = 104.0
offset_top = 1.0
offset_right = 239.0
offset_bottom = 76.0
texture = SubResource("CanvasTexture_0gmd4")

[node name="HidePanel2" type="TextureRect" parent="Story/Page2"]
self_modulate = Color(0, 0, 0, 0.839216)
layout_mode = 0
offset_left = 8.0
offset_top = 76.0
offset_right = 103.0
offset_bottom = 151.0
texture = SubResource("CanvasTexture_0gmd4")

[node name="HidePanel3" type="TextureRect" parent="Story/Page2"]
self_modulate = Color(0, 0, 0, 0.839216)
layout_mode = 0
offset_left = 103.667
offset_top = 76.0
offset_right = 238.667
offset_bottom = 151.0
texture = SubResource("CanvasTexture_0gmd4")

[node name="Loading" type="ProgressBar" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -72.0
offset_right = -19.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_ds2yw")
theme_override_font_sizes/font_size = 30
theme_override_styles/background = SubResource("StyleBoxTexture_c5qc4")
theme_override_styles/fill = SubResource("StyleBoxFlat_850my")
value = 100.0
rounded = true

[node name="LoadBarSize" type="Control" parent="Loading"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" type="AnimatedSprite2D" parent="Loading"]
position = Vector2(64, -35)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_3hed0")
autoplay = "default"
frame_progress = 0.400166

[node name="Dialogue" type="Node" parent="."]
script = ExtResource("7_d6db0")
lines = Array[String](["In the year XXXX, an ancient tomb suddenly emerged from the ground in Rome. The appearance of this tomb piqued the interest of King Altair.", "He declared a call to adventurers from all over the world to raid the tomb in search of riches and gold.", "Adventurers from distant lands and yourself rushed to the discovered tomb with dreams of untold wealth.", "Eventually, everyone reached the heart of the tomb and claimed the ultimate treasure. However, just as the adventurers celebrated their victory, the tomb suddenly came to life.", "The once passive tomb transformed into a deadly maze, filled with lethal traps and powerful monsters.", "One by one, your fellow adventurers fell victim to the tomb's malevolent defenses. As chaos reigned, you found yourself alone, the last survivor in this nightmarish labyrinth.", "Desperation turned to hope when you discovered the Deck of Creation, a powerful artifact that grants you the ability to rotate or move the rooms of the tomb as you wish.", "With this newfound power, your only goal is to escape the tomb alive."])
